--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,10 @@
     border-radius: 25px;
 }
 
+.category {
+    text-decoration: underline;
+}
+
 h1 {
     text-align: center;
     font-size: 4em;
